fix: jumping bug when "Own songs only" is toggled

--- a/resources/assets/sass/partials/_shared.scss
+++ b/resources/assets/sass/partials/_shared.scss
@@ -153,6 +153,7 @@ em {
 label {
   font-size: 1.1rem;
   display: block;
+  cursor: pointer;
 
   &.small {
     font-size: 1rem;
